@@ -26,15 +26,15 @@ jobs:
           raku-version: ${{ matrix.raku-version }}
       - name: Install Dependencies
         run: |
-          export LD_LIBRARY_PATH=`pwd`/harfbuzz-2.7.4/src/.libs
+          export LD_LIBRARY_PATH=`pwd`/harfbuzz-3.3.1/src/.libs
           ## Requires Debian 11+
           ##sudo apt-get install -y libharfbuzz-dev
-          wget -q https://github.com/harfbuzz/harfbuzz/archive/2.7.4.tar.gz
-          (tar xzf 2.7.4.tar.gz && cd harfbuzz-2.7.4 && ./autogen.sh && make)
+          wget -q https://github.com/harfbuzz/harfbuzz/archive/3.3.1.tar.gz
+          (tar xzf 3.3.1.tar.gz && cd harfbuzz-3.3.1 && ./autogen.sh && make)
           zef install --/test App::Prove6
           zef --deps-only install .
       - name: Run Tests
         run: |
-          export LD_LIBRARY_PATH=`pwd`/harfbuzz-2.7.4/src/.libs
+          export LD_LIBRARY_PATH=`pwd`/harfbuzz-3.3.1/src/.libs
           prove6 -l t
           zef install .
