@@ -5,14 +5,14 @@ use Font::FreeType::Face;
 use HarfBuzz::Font::FreeType;
 use HarfBuzz::Feature;
 use HarfBuzz::Shaper::Cairo;
+use HarfBuzz::Font::Cairo;
 use HarfBuzz::Glyph;
 use Cairo;
 
 sub MAIN(Str $font-file, Str $text = 'Hello from HarfBuzz', :features(@feats), :$output = 'out.png', UInt :$font-size = 36, Numeric :$margin = $font-size / 2) {
-    my Font::FreeType::Face:D $ft-face = Font::FreeType.face($font-file);
     my HarfBuzz::Feature() @features = @feats;
-    my HarfBuzz::Font::FreeType() $font = %( :$ft-face, :@features, :size($font-size) );
-    my HarfBuzz::Shaper::Cairo $shaper .= new: :$font, :buf{:$text }
+    my HarfBuzz::Font::Cairo() $font = %( :file($font-file), :@features, :size($font-size) );
+    my HarfBuzz::Shaper::Cairo $shaper = $font.shaper: {:$text }
     my HarfBuzz::Glyph @glyphs = $shaper.shape;
     my $width  = 2 * $margin + @glyphs>>.x-advance.sum ;
     my $height = 2 * $margin - @glyphs>>.y-advance.sum;
@@ -25,9 +25,8 @@ sub MAIN(Str $font-file, Str $text = 'Hello from HarfBuzz', :features(@feats), :
     $ctx.rgba(0, 0, 0, 1);
     $ctx.translate($margin, $margin);
 
-    my Cairo::Font $cairo-font .= create(
-        $ft-face.raw, :free-type,
-    );
+    my Cairo::Font $cairo-font = $font.cairo-font;
+
     $ctx.set_font_face($cairo-font);
     $ctx.set_font_size($font-size);
     if $shaper.is-horizontal {
