@@ -1,6 +1,7 @@
 Revision history for HarfBuzz-Shaper-Cairo
 
 {{$NEXT}}
+    - Add class HarfBuzz::Font::Cairo
 
 0.0.1  2021-02-20T08:04:58+13:00
     - Initial version
